--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Agency Solution</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div class="nav-middle">
+          <a href=""> Home <img src="/images/Stroke 5.png" alt="" /></a>
+          <a href=""> Pages <img src="/images/Stroke 5.png" alt="" /></a>
+          <a href=""> Blog <img src="/images/Stroke 5.png" alt="" /></a>
+          <a href=""> Portfolio <img src="/images/Stroke 5.png" alt="" /></a>
+          <a href=""> Shop <img src="/images/Stroke 5.png" alt="" /></a>
+          <a href=""> Contact <img src="/images/Stroke 5.png" alt="" /></a>
+        </div>
+        <div class="nav-right">
+          <img src="/images/cart.png" alt="" />
+          <img src="/images/search.png" alt="" />
+          <img src="/images/menu.png" alt="" />
+        </div>
+      </nav>
+      <section>
+        <div class="hero">
+          <div class="hero-left">
+            <img src="/images/shape.png" alt="" />
+            <p class="text1">Digital Agency Solution</p>
+            <p class="text2">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <img src="/images/scroll.png" alt="" />
+            <img src="/images/shape (1).png" alt="" />
+          </div>
+          <div class="hero-middle">
+            <img src="/images/play button.png" alt="" />
+          </div>
+          <div class="hero-right">
+            <div><img src="/images/image (1).png" alt="" /></div>
+            <div><img src="/images/fun fact.png" alt="" /></div>
+          </div>
+        </div>
+        <div>
+          <img src="/images/partners.png" alt="" />
+        </div>
+      </section>
+    </header>
+  </body>
 </html>
