--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Poppins:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Plus+Jakarta+Sans:wght@200&family=Poppins:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -32,24 +38,35 @@
       <section>
         <div class="hero">
           <div class="hero-left">
-            <img src="/images/shape.png" alt="" />
+            <img class="shape" src="/images/shape.png" alt="" />
             <p class="text1">Digital Agency Solution</p>
             <p class="text2">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
-            <img src="/images/scroll.png" alt="" />
-            <img src="/images/shape (1).png" alt="" />
+            <div class="scroll"><img src="/images/scroll.png" alt="" /></div>
+            <div class="peanut"><img src="/images/shape (1).png" alt="" /></div>
           </div>
           <div class="hero-middle">
             <img src="/images/play button.png" alt="" />
           </div>
           <div class="hero-right">
-            <div><img src="/images/image (1).png" alt="" /></div>
-            <div><img src="/images/fun fact.png" alt="" /></div>
+            <div>
+              <div class="hero-right-left-img">
+                <img src="/images/image (1).png" alt="" />
+              </div>
+              <img
+                class="hero-right-bottom-img"
+                src="/images/meta.png"
+                alt=""
+              />
+            </div>
+            <div class="hero-right-right-img">
+              <img src="/images/fun fact.png" alt="" />
+            </div>
           </div>
         </div>
-        <div>
+        <div class="partners">
           <img src="/images/partners.png" alt="" />
         </div>
       </section>
