--- a/Index.html
+++ b/Index.html
@@ -71,5 +71,25 @@
         </div>
       </section>
     </header>
+    <main>
+      <section class="main">
+        <section>
+          <div>
+            <p></p>
+            <p></p>
+            <img src="" alt="" />
+            <img src="" alt="" />
+          </div>
+          <div>
+            <img src="" alt="" />
+            <img src="" alt="" />
+          </div>
+          <div>
+            <p></p>
+            <img src="" alt="" />
+          </div>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
