--- a/Index.html
+++ b/Index.html
@@ -73,10 +73,10 @@
     </header>
     <main>
       <section class="main">
-        <section>
-          <div>
-            <p></p>
-            <p></p>
+        <section class="main-one">
+          <div class="main-one-ct1">
+            <p>ABOUT US</p>
+            <p>We Create Digital World Class Business Agency Marketplace</p>
             <img src="" alt="" />
             <img src="" alt="" />
           </div>
