--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Plus+Jakarta+Sans:wght@200&family=Poppins:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Plus+Jakarta+Sans:wght@200&family=Poppins:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -73,20 +79,49 @@
     </header>
     <main>
       <section class="main">
-        <section class="main-one">
-          <div class="main-one-ct1">
-            <p>ABOUT US</p>
-            <p>We Create Digital World Class Business Agency Marketplace</p>
-            <img src="" alt="" />
-            <img src="" alt="" />
+        <section class="first-sec">
+          <div class="first-sec-main-one">
+            <div class="main-one-sub1">
+              <p>ABOUT US</p>
+              <p>We Create Digital World Class Business Agency Marketplace</p>
+            </div>
+            <div class="main-one-sub2">
+              <img src="/images/image (2).png" alt="" />
+            </div>
+            <div class="main-one-sub3">
+              <div class="main-one-sub3-img1">
+                <img src="/images/shape (2).png" alt="" />
+              </div>
+              <div class="main-one-sub3-img2">
+                <img src="/images/meta (1).png" alt="" />
+              </div>
+            </div>
           </div>
-          <div>
-            <img src="" alt="" />
-            <img src="" alt="" />
-          </div>
-          <div>
-            <p></p>
-            <img src="" alt="" />
+          <div class="first-sec-main-two">
+            <div>
+              <img src="/images/shape.png" alt="" />
+            </div>
+            <div>
+              <img src="/images/shape (3).png" alt="" />
+            </div>
+            <div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore.
+              </p>
+              <p>
+                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+                quae ab illo inventore veritatis et quasi architecto beatae
+                vitae dicta sunt explicabo.
+              </p>
+              <div>
+                <img src="/images/button.png" alt="" />
+              </div>
+            </div>
           </div>
         </section>
       </section>
