--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Plus+Jakarta+Sans:wght@200&family=Poppins:wght@500;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -82,8 +88,10 @@
         <section class="first-sec">
           <div class="first-sec-main-one">
             <div class="main-one-sub1">
-              <p>ABOUT US</p>
-              <p>We Create Digital World Class Business Agency Marketplace</p>
+              <p class="main-one-text1">ABOUT US</p>
+              <p class="main-one-text2">
+                We Create Digital World Class Business Agency Marketplace
+              </p>
             </div>
             <div class="main-one-sub2">
               <img src="/images/image (2).png" alt="" />
@@ -98,32 +106,87 @@
             </div>
           </div>
           <div class="first-sec-main-two">
-            <div>
+            <div class="first-sec-main-img1">
               <img src="/images/shape.png" alt="" />
             </div>
-            <div>
+            <div class="first-sec-main-img2">
               <img src="/images/shape (3).png" alt="" />
             </div>
-            <div>
-              <p>
+            <div class="first-sec-main-two-1">
+              <p class="first-sec-main-two-text1">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam, quis nostrud exercitation ullamco laboris
                 nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                 in reprehenderit in voluptate velit esse cillum dolore.
               </p>
-              <p>
+              <p class="first-sec-main-two-text2">
                 Sed ut perspiciatis unde omnis iste natus error sit voluptatem
                 accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
                 quae ab illo inventore veritatis et quasi architecto beatae
                 vitae dicta sunt explicabo.
               </p>
-              <div>
+              <div class="first-sec-btn">
                 <img src="/images/button.png" alt="" />
               </div>
             </div>
           </div>
         </section>
+      </section>
+      <section class="second-sec">
+        <div class="second-sec-main">
+          <div class="second-sec-main-1">
+            <div class="scond-sec-ct1">
+              <img src="/images/icon (4).png" alt="" />
+              <p><span>Branding</span>Design</p>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+            <ul>
+              <li>Logo Design</li>
+              <li>Business Card</li>
+              <li>Social Media</li>
+              <li>Advertisement</li>
+              <li>Promotion</li>
+            </ul>
+          </div>
+          <div class="second-sec-main-2">
+            <div class="scond-sec-ct2">
+              <img src="/images/icon (1).png" alt="" />
+              <p><span>Branding</span>Design</p>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+            <ul>
+              <li>Logo Design</li>
+              <li>Business Card</li>
+              <li>Social Media</li>
+              <li>Advertisement</li>
+              <li>Promotion</li>
+            </ul>
+          </div>
+          <div class="second-sec-main-3">
+            <div class="scond-sec-ct2">
+              <img src="/images/icon (2).png" alt="" />
+              <p><span>Branding</span>Design</p>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+            <ul>
+              <li>Logo Design</li>
+              <li>Business Card</li>
+              <li>Social Media</li>
+              <li>Advertisement</li>
+              <li>Promotion</li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
   </body>
