--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,12 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Londrina+Outline&family=Plus+Jakarta+Sans:wght@200&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -136,11 +142,14 @@
       <section class="second-sec">
         <div class="second-sec-main">
           <div class="second-sec-main-1">
-            <div class="scond-sec-ct1">
+            <div class="second-sec-ct1">
               <img src="/images/icon (4).png" alt="" />
-              <p><span>Branding</span>Design</p>
+              <p class="design">
+                <span class="branding">Branding</span> <br />
+                Design
+              </p>
             </div>
-            <p>
+            <p class="lorem">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor.
             </p>
@@ -153,11 +162,14 @@
             </ul>
           </div>
           <div class="second-sec-main-2">
-            <div class="scond-sec-ct2">
+            <div class="second-sec-ct2">
               <img src="/images/icon (1).png" alt="" />
-              <p><span>Branding</span>Design</p>
+              <p class="design">
+                <span class="interactive">Interactive</span> <br />
+                Design
+              </p>
             </div>
-            <p>
+            <p class="lorem">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor.
             </p>
@@ -170,11 +182,14 @@
             </ul>
           </div>
           <div class="second-sec-main-3">
-            <div class="scond-sec-ct2">
+            <div class="second-sec-ct3">
               <img src="/images/icon (2).png" alt="" />
-              <p><span>Branding</span>Design</p>
+              <p class="design">
+                <span class="illustration">Illustration</span> <br />
+                Modelling
+              </p>
             </div>
-            <p>
+            <p class="lorem">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor.
             </p>
