--- a/Index.html
+++ b/Index.html
@@ -35,58 +35,68 @@
       href="https://fonts.googleapis.com/css2?family=Londrina+Outline&family=Plus+Jakarta+Sans:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
-      <nav>
-        <div class="nav-middle">
-          <a href=""> Home <img src="/images/Stroke 5.png" alt="" /></a>
-          <a href=""> Pages <img src="/images/Stroke 5.png" alt="" /></a>
-          <a href=""> Blog <img src="/images/Stroke 5.png" alt="" /></a>
-          <a href=""> Portfolio <img src="/images/Stroke 5.png" alt="" /></a>
-          <a href=""> Shop <img src="/images/Stroke 5.png" alt="" /></a>
-          <a href=""> Contact <img src="/images/Stroke 5.png" alt="" /></a>
-        </div>
-        <div class="nav-right">
-          <img src="/images/cart.png" alt="" />
-          <img src="/images/search.png" alt="" />
-          <img src="/images/menu.png" alt="" />
-        </div>
-      </nav>
-      <section>
-        <div class="hero">
-          <div class="hero-left">
-            <img class="shape" src="/images/shape.png" alt="" />
-            <p class="text1">Digital Agency Solution</p>
-            <p class="text2">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-            <div class="scroll"><img src="/images/scroll.png" alt="" /></div>
-            <div class="peanut"><img src="/images/shape (1).png" alt="" /></div>
+      <section class="main-hero">
+        <nav>
+          <div class="nav-middle">
+            <a href=""> Home <img src="/images/Stroke 5.png" alt="" /></a>
+            <a href=""> Pages <img src="/images/Stroke 5.png" alt="" /></a>
+            <a href=""> Blog <img src="/images/Stroke 5.png" alt="" /></a>
+            <a href=""> Portfolio <img src="/images/Stroke 5.png" alt="" /></a>
+            <a href=""> Shop <img src="/images/Stroke 5.png" alt="" /></a>
+            <a href=""> Contact <img src="/images/Stroke 5.png" alt="" /></a>
           </div>
-          <div class="hero-middle">
-            <img src="/images/play button.png" alt="" />
+          <div class="nav-right">
+            <img src="/images/cart.png" alt="" />
+            <img src="/images/search.png" alt="" />
+            <img src="/images/menu.png" alt="" />
           </div>
-          <div class="hero-right">
-            <div>
-              <div class="hero-right-left-img">
-                <img src="/images/image (1).png" alt="" />
+        </nav>
+        <section>
+          <div class="hero">
+            <div class="hero-left">
+              <img class="shape" src="/images/shape.png" alt="" />
+              <p class="text1">Digital Agency Solution</p>
+              <p class="text2">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
+              <div class="scroll"><img src="/images/scroll.png" alt="" /></div>
+              <div class="peanut">
+                <img src="/images/shape (1).png" alt="" />
               </div>
-              <img
-                class="hero-right-bottom-img"
-                src="/images/meta.png"
-                alt=""
-              />
             </div>
-            <div class="hero-right-right-img">
-              <img src="/images/fun fact.png" alt="" />
+            <div class="hero-middle">
+              <img src="/images/play button.png" alt="" />
+            </div>
+            <div class="hero-right">
+              <div>
+                <div class="hero-right-left-img">
+                  <img src="/images/image (1).png" alt="" />
+                </div>
+                <img
+                  class="hero-right-bottom-img"
+                  src="/images/meta.png"
+                  alt=""
+                />
+              </div>
+              <div class="hero-right-right-img">
+                <img src="/images/fun fact.png" alt="" />
+              </div>
             </div>
           </div>
-        </div>
-        <div class="partners">
-          <img src="/images/partners.png" alt="" />
-        </div>
+          <div class="partners">
+            <img src="/images/partners.png" alt="" />
+          </div>
+        </section>
       </section>
     </header>
     <main>
@@ -203,6 +213,83 @@
           </div>
         </div>
       </section>
+      <section class="third-sec">
+        <div class="third-sec-main">
+          <div class="third-sec-main-1">
+            <div class="third-sec-main-1-sub">
+              <div class="third-sec-main-1-sub1">
+                <p class="third-sec-main-1-sub1-text1">PORTFOLIO</p>
+                <p class="third-sec-main-1-sub1-text2">
+                  We create places that connect, sustain & inspire
+                </p>
+              </div>
+              <div class="third-sec-main-1-sub2">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <img src="/images/button (1).png" alt="" />
+              </div>
+            </div>
+          </div>
+          <div>
+            <img class="shape2" src="/images/shape.png" alt="" />
+          </div>
+        </div>
+        <section class=".fourth-sec">
+          <div class="fourth-sec-main-sub">
+            <div class="fourth-sec-main-sub1">
+              <p>01.<span class="web"> Web & Mobile Development</span></p>
+              <div class="arrow"><img src="/images/arrow.png" alt="" /></div>
+            </div>
+            <img class="line" src="/images/Line 17.png" alt="" />
+            <div class="fourth-sec-main-sub1">
+              <p>02.<span class="web"> Interaction Design</span></p>
+              <div class="arrow">
+                <img src="/images/arrow (1).png" alt="" />
+              </div>
+            </div>
+            <img class="line" src="/images/Line 17.png" alt="" />
+            <div class="fourth-sec-main-sub1">
+              <p>03.<span class="web"> Digital Marketing</span></p>
+              <div class="arrow"><img src="/images/arrow.png" alt="" /></div>
+            </div>
+            <img class="line" src="/images/Line 17.png" alt="" />
+            <div class="fourth-sec-main-sub1">
+              <p>04<span class="web"> Branding & Strategy</span></p>
+              <div class="arrow"><img src="/images/arrow.png" alt="" /></div>
+            </div>
+            <img class="line" src="/images/Line 17.png" alt="" />
+          </div>
+          <div class="image-3">
+            <img src="/images/image (3).png" alt="" />
+          </div>
+        </section>
+        <section class="fifth-sec">
+          <div class="third-sec-main-1">
+            <div class="third-sec-main-1-sub">
+              <div class="third-sec-main-1-sub1">
+                <p class="third-sec-main-1-sub1-text1">OUR TEAM</p>
+                <p class="third-sec-main-1-sub1-text2">
+                  Builds Our Future Experience Team Members
+                </p>
+              </div>
+              <div class="third-sec-main-1-sub2">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore .
+                </p>
+                <img src="/images/arrow (2).png" alt="" />
+              </div>
+            </div>
+          </div>
+        </section>
+      </section>
     </main>
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"
+  ></script>
 </html>
