--- a/Index.html
+++ b/Index.html
@@ -269,12 +269,12 @@
           <div class="third-sec-main-1">
             <div class="third-sec-main-1-sub">
               <div class="third-sec-main-1-sub1">
-                <p class="third-sec-main-1-sub1-text1">OUR TEAM</p>
-                <p class="third-sec-main-1-sub1-text2">
+                <p class="fifth-sec-text1">OUR TEAM</p>
+                <h1 class="fifth-sec-text2">
                   Builds Our Future Experience Team Members
-                </p>
+                </h1>
               </div>
-              <div class="third-sec-main-1-sub2">
+              <div class="fifth-sec-img">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore .
