--- a/Index.html
+++ b/Index.html
@@ -284,6 +284,37 @@
             </div>
           </div>
         </section>
+        <section class="sixth-sec">
+          <div class="sixth-sec-main">
+            <div class="sixth-sec-sub">
+              <img src="/images/image (6).png" alt="" />
+              <div class="sixth-sec-text">
+                <h2>Aimee Calderon</h2>
+                <p>Web Developer</p>
+              </div>
+            </div>
+            <div class="sixth-sec-sub">
+              <img src="/images/image (4).png" alt="" />
+              <div class="sixth-sec-text">
+                <h2>Raymond Horn</h2>
+                <p>Digital Marketer</p>
+              </div>
+            </div>
+            <div class="sixth-sec-sub">
+              <img src="/images/image (5).png" alt="" />
+              <div class="sixth-sec-text">
+                <h2>Linda Towner</h2>
+                <p>App Designer</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <div class="slide">
+          <img src="/images/slide.png" alt="" />
+        </div>
+        <div class="shape">
+          <img class="shape2" src="/images/shape.png" alt="" />
+        </div>
       </section>
     </main>
   </body>
