--- a/Index.html
+++ b/Index.html
@@ -315,6 +315,7 @@
         <div class="shape">
           <img class="shape2" src="/images/shape.png" alt="" />
         </div>
+        <section></section>
       </section>
     </main>
   </body>
