--- a/Index.html
+++ b/Index.html
@@ -315,7 +315,75 @@
         <div class="shape">
           <img class="shape2" src="/images/shape.png" alt="" />
         </div>
-        <section></section>
+        <section class="seventh-sec">
+          <div class="seventh-sec-main">
+            <div class="seventh-sec-main1">
+              <p>TESTIMONIALS</p>
+              <h3>Feedback From Our Clients</h3>
+            </div>
+            <div class="seventh-sec-main2">
+              <img src="/images/arrow (2).png" alt="" />
+            </div>
+          </div>
+        </section>
+        <section class="eight-sec">
+          <div class="eight-sec-main">
+            <div class="eight-sec-main-sub">
+              <div class="eight-sec-sub">
+                <img src="/images/Line 18.png" alt="" />
+                <p>
+                  <i>
+                    "But I must explain to you how all this mistaken idea of
+                    denouncing pleasure and praising pain was born and I will
+                    give you a complete."</i
+                  >
+                </p>
+              </div>
+              <img class="element" src="/images/element (1).png" alt="" />
+              <div class="feedback">
+                <img class="author" src="/images/author.png" alt="" />
+                <img class="quote" src="/images/quote.png" alt="" />
+              </div>
+            </div>
+            <div class="eight-sec-main-sub">
+              <div class="eight-sec-sub">
+                <img src="/images/Line 18.png" alt="" />
+                <p>
+                  <i>
+                    "But I must explain to you how all this mistaken idea of
+                    denouncing pleasure and praising pain was born and I will
+                    give you a complete."</i
+                  >
+                </p>
+              </div>
+              <img class="element" src="/images/element (1).png" alt="" />
+              <div class="feedback">
+                <img class="author" src="/images/author (1).png" alt="" />
+                <img class="quote" src="/images/quote.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="ninth-sec">
+          <div class="third-sec-main-1">
+            <div class="third-sec-main-1-sub">
+              <div class="third-sec-main-1-sub1">
+                <p class="third-sec-main-1-sub1-text1">LATEST UPDATES</p>
+                <p class="third-sec-main-1-sub1-text2">
+                  Check Some of Our <br />
+                  Latest Update Blog
+                </p>
+              </div>
+              <div class="third-sec-main-1-sub2">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <img src="/images/button (2).png" alt="" />
+              </div>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
   </body>
