--- a/Index.html
+++ b/Index.html
@@ -374,12 +374,39 @@
                   Latest Update Blog
                 </p>
               </div>
-              <div class="third-sec-main-1-sub2">
+              <div class="ninth-sec-img">
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
                 <img src="/images/button (2).png" alt="" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="tenth-sec">
+          <div class="tenth-sec-main">
+            <div class="tenth-sec-main-sub">
+              <div>
+                <p>UI Design | 15 Dec 2022</p>
+                <h3>What is Digital Agency Marketing</h3>
+              </div>
+              <div>
+                <p>Business | 15 Dec 2022</p>
+                <h3>Support During the Exponential Growth</h3>
+              </div>
+            </div>
+            <div>
+              <img src="/images/image (7).png" alt="" />
+            </div>
+            <div>
+              <div>
+                <p>Marketing | 15 Dec 2022</p>
+                <h3>A Simple Social Media Marketing Checklist</h3>
+              </div>
+              <div>
+                <p>Marketing | 15 Dec 2022</p>
+                <h3>The Importance of Making Content Right Now</h3>
               </div>
             </div>
           </div>
