--- a/Index.html
+++ b/Index.html
@@ -387,26 +387,35 @@
         <section class="tenth-sec">
           <div class="tenth-sec-main">
             <div class="tenth-sec-main-sub">
-              <div>
-                <p>UI Design | 15 Dec 2022</p>
+              <div class="tenth-sec-main-sub1">
+                <p class="date-text">
+                  UI Design | <span class="date-num"> 15 Dec 2022</span> 15 Dec
+                  2022
+                </p>
                 <h3>What is Digital Agency Marketing</h3>
               </div>
               <div>
-                <p>Business | 15 Dec 2022</p>
-                <h3>Support During the Exponential Growth</h3>
+                <p class="date-text">
+                  Business | <span class="date-num"> 15 Dec 2022</span>
+                </p>
+                <h3>The Importance of Making Content Right Now</h3>
               </div>
             </div>
-            <div>
+            <div class="tenth-sec-main-sub2">
               <img src="/images/image (7).png" alt="" />
             </div>
             <div>
-              <div>
-                <p>Marketing | 15 Dec 2022</p>
+              <div class="tenth-sec-main-sub1">
+                <p class="date-text">
+                  Marketing | <span class="date-num"> 15 Dec 2022</span>
+                </p>
                 <h3>A Simple Social Media Marketing Checklist</h3>
               </div>
               <div>
-                <p>Marketing | 15 Dec 2022</p>
-                <h3>The Importance of Making Content Right Now</h3>
+                <p class="date-text">
+                  Marketing | <span class="date-num">15 Dec 2022</span>
+                </p>
+                <h3>Support During the Exponential Growth</h3>
               </div>
             </div>
           </div>
