--- a/Index.html
+++ b/Index.html
@@ -420,6 +420,24 @@
             </div>
           </div>
         </section>
+        <section class="eleventh-section">
+          <div class="eleventh-section-main">
+            <img src="/images/image (8).png" alt="" />
+          </div>
+        </section>
+        <section class="last-section">
+          <div class="bottom-box">
+            <p>
+              Let’s Make Something <br />
+              Great
+              <span class="together">Together!</span>
+            </p>
+            <div class="circle">
+              <h4>CONTACT WITH US</h4>
+              <img src="/images/arrow (3).png" alt="" />
+            </div>
+          </div>
+        </section>
       </section>
     </main>
   </body>
