--- a/Index.html
+++ b/Index.html
@@ -440,6 +440,35 @@
         </section>
       </section>
     </main>
+    <footer>
+      <div class="footer-main">
+        <div class="footer-main-1">
+          <p>
+            Lorem ipsum dolor sit amet consecte tur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua tepo the.
+          </p>
+          <img src="/images/phone.png" alt="" />
+        </div>
+        <div class="footer-main-2">
+          <p class="quick">Quick Links</p>
+          <div class="about">
+            <div>
+              <p>About Us</p>
+              <p>Pricing Table</p>
+              <p>Contact Us</p>
+              <p>Meet Our Team</p>
+              <p>Latest News</p>
+            </div>
+            <div>
+              <p>Case Studies</p>
+              <p>FAQ’s</p>
+              <p>Services</p>
+              <p>Customer Support</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
