--- a/Index.html
+++ b/Index.html
@@ -468,6 +468,20 @@
           </div>
         </div>
       </div>
+      <div class="footer-line">
+        <img src="/images/element (2).png" alt="" />
+      </div>
+      <div class="footer-attribute">
+        <div>
+          <p>© 2023 davixq All Rights Reserved</p>
+        </div>
+        <div>
+          <p>designed by <span class="david">David Agono</span></p>
+        </div>
+        <div>
+          <p>Privacy Policy</p>
+        </div>
+      </div>
     </footer>
   </body>
   <script
