--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Agency Solution</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaQuery.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -88,8 +89,35 @@
                   alt=""
                 />
               </div>
-              <div class="hero-right-right-img">
-                <img src="/images/fun fact.png" alt="" />
+              <div class="hero-right-counter">
+                <div class="counter">
+                  <div class="count-flex">
+                    <h2 class="count" data-target="1204">0</h2>
+                    <h2>k+</h2>
+                  </div>
+                  <p>Project Complete</p>
+                </div>
+                <div class="counter">
+                  <div class="count-flex">
+                    <h2 class="count" data-target="135">0</h2>
+                    <h2>K+</h2>
+                  </div>
+                  <p>Happy Client</p>
+                </div>
+                <div class="counter">
+                  <div class="count-flex">
+                    <h3 class="count" data-target="160">0</h3>
+                    <h3>K+</h3>
+                  </div>
+                  <p>Years Experience</p>
+                </div>
+                <div class="counter">
+                  <div class="count-flex">
+                    <h3 class="count" data-target="270">0</h3>
+                    <h3>K+</h3>
+                  </div>
+                  <p>Win Awards</p>
+                </div>
               </div>
             </div>
           </div>
@@ -483,10 +511,11 @@
         </div>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"
-  ></script>
 </html>
