--- a/Index.html
+++ b/Index.html
@@ -145,7 +145,22 @@
                 <img src="/images/shape (2).png" alt="" />
               </div>
               <div class="main-one-sub3-img2">
-                <img src="/images/meta (1).png" alt="" />
+                <div class="bottom-counter">
+                  <div class="bottom-counter-1">
+                    <div class="count-flex">
+                      <h3 class="count" data-target="586">0</h3>
+                      <h3>+</h3>
+                    </div>
+                    <p>Working Peoples</p>
+                  </div>
+                  <div class="bottom-counter-1">
+                    <div class="count-flex">
+                      <h3 class="count" data-target="189">0</h3>
+                      <h3>+</h3>
+                    </div>
+                    <p>World Office</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
