--- a/Index.html
+++ b/Index.html
@@ -58,15 +58,15 @@
           <div class="nav-right">
             <img src="/images/cart.png" alt="" />
             <img src="/images/search.png" alt="" />
-            <img src="/images/menu.png" alt="" />
+            <img class="menu" src="/images/menu.png" alt="" />
           </div>
         </nav>
         <section>
-          <div class="hero">
-            <div class="hero-left">
+          <div class="hero row w-100">
+            <div class="hero-left col-md-5">
               <img class="shape" src="/images/shape.png" alt="" />
-              <p class="text1">Digital Agency Solution</p>
-              <p class="text2">
+              <p class="text1 text-center">Digital Agency Solution</p>
+              <p class="text2 text-center">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
@@ -75,10 +75,10 @@
                 <img src="/images/shape (1).png" alt="" />
               </div>
             </div>
-            <div class="hero-middle">
+            <div class="hero-middle col-md-1">
               <img src="/images/play button.png" alt="" />
             </div>
-            <div class="hero-right">
+            <div class="hero-right col-md-6">
               <div>
                 <div class="hero-right-left-img">
                   <img src="/images/image (1).png" alt="" />
