--- a/Index.html
+++ b/Index.html
@@ -62,11 +62,11 @@
           </div>
         </nav>
         <section>
-          <div class="hero row w-100">
+          <div class="hero row">
             <div class="hero-left col-md-5">
               <img class="shape" src="/images/shape.png" alt="" />
-              <p class="text1 text-center">Digital Agency Solution</p>
-              <p class="text2 text-center">
+              <p class="text1">Digital Agency Solution</p>
+              <p class="text2">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
@@ -79,7 +79,7 @@
               <img src="/images/play button.png" alt="" />
             </div>
             <div class="hero-right col-md-6">
-              <div>
+              <div class="hero-right-main-img">
                 <div class="hero-right-left-img">
                   <img src="/images/image (1).png" alt="" />
                 </div>
@@ -89,7 +89,9 @@
                   alt=""
                 />
               </div>
-              <div class="hero-right-counter">
+              <div
+                class="hero-right-counter d-flex flex-wrap flex-md-row justify-content-evenly"
+              >
                 <div class="counter">
                   <div class="count-flex">
                     <h3 class="count" data-target="1204">0</h3>
