--- a/Index.html
+++ b/Index.html
@@ -132,7 +132,7 @@
     <main>
       <section class="main">
         <section class="first-sec">
-          <div class="first-sec-main-one">
+          <div class="first-sec-main-one col-md-6">
             <div class="main-one-sub1">
               <p class="main-one-text1">ABOUT US</p>
               <p class="main-one-text2">
@@ -166,7 +166,7 @@
               </div>
             </div>
           </div>
-          <div class="first-sec-main-two">
+          <div class="first-sec-main-two col-md-6">
             <div class="first-sec-main-img1">
               <img src="/images/shape.png" alt="" />
             </div>
