--- a/Index.html
+++ b/Index.html
@@ -47,18 +47,10 @@
     <header>
       <section class="main-hero">
         <nav>
-          <div class="nav-middle">
-            <a href=""> Home <img src="/images/Stroke 5.png" alt="" /></a>
-            <a href=""> Pages <img src="/images/Stroke 5.png" alt="" /></a>
-            <a href=""> Blog <img src="/images/Stroke 5.png" alt="" /></a>
-            <a href=""> Portfolio <img src="/images/Stroke 5.png" alt="" /></a>
-            <a href=""> Shop <img src="/images/Stroke 5.png" alt="" /></a>
-            <a href=""> Contact <img src="/images/Stroke 5.png" alt="" /></a>
-          </div>
+          <div class="nav-middle mobile-nav"></div>
           <div class="nav-right">
             <img src="/images/cart.png" alt="" />
             <img src="/images/search.png" alt="" />
-            <img class="menu" src="/images/menu.png" alt="" />
           </div>
         </nav>
         <section>
